--- a/css_practice/style.css
+++ b/css_practice/style.css
@@ -1,3 +1,7 @@
+ * {
+    margin: 0;
+    padding: 0;
+  }
 #list_id {
     color: blue;
   }
@@ -5,3 +9,19 @@
   .list_class {
     color: red;
   }
+ 
+  
+  .box {
+    background-color: red;
+    width: 200px;
+    height: 200px;
+    border: 3px solid #000;
+    padding: 30px;
+    margin: 30px;
+  }
+  
+  .box-txt{
+    font-size: 30px;
+    color: blue;
+    font-weight: bold;
+    text-align: center;}
